--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="index.js" type="module" defer></script>
 </head>
 <body>
     <h1>Welcome to Bisque</h1>
+    <p>The place to bask</p>
+
 </body>
 </html>
